# javascriptcore-haskell

./: .gitignore  jscore.cabal
src/: C2HS.hs
src/Graphics/UI/Gtk/WebKit/JavaScriptCore/: JSBase.chs  JSContextRef.chs  JSObjectRef.chs  JSStringRef.chs  JSValueRef.chs  Types.chs
src/include/: JSObjectRef.wrapper.h  alignment.h
src/include/JavaScriptCore/: JSBase.h  JSObjectRef.h  JSValueRef.h
